Match-id-ea3e66268f005082a9597e94e32d653e5252e6ee

--- a/mindx-dl/deploy/offline/cluster/offline_deploy_service.yaml
+++ b/mindx-dl/deploy/offline/cluster/offline_deploy_service.yaml
@@ -126,7 +126,7 @@
     - name: Deploy volcano
       shell:
         chdir: "{{deploy_yaml_dir}}"
-        cmd: kubectl apply -f volcano-v0.0.1.yaml
+        cmd: kubectl apply -f volcano-*.yaml
 
     # Deleting Software Packages
     - name: Deleting software packages
