--- a/mindx-dl/deploy/offline/single/offline_load_images.yaml
+++ b/mindx-dl/deploy/offline/single/offline_load_images.yaml
@@ -44,26 +44,26 @@
           docker load < calico-kube-controllers_amd64.tar.gz;
       when: ansible_architecture == "x86_64"
 
-    - name: Load MindX DL-core images - arm64
+    - name: Load mindx images - arm64
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < vc-controller-manager.tar.gz;
-          docker load < vc-scheduler.tar.gz;
-          docker load < vc-webhook-manager.tar.gz;
-          docker load < hccl-controller.tar.gz;
+          docker load < vc-controller-manager_arm64.tar.gz;
+          docker load < vc-scheduler_arm64.tar.gz;
+          docker load < vc-webhook-manager_arm64.tar.gz;
+          docker load < hccl-controller_arm64.tar.gz;
           docker load < Ascend-K8sDevicePlugin-0.0.1-arm64-Docker.tar.gz;
-          docker load < huawei-cadvisor-beta.tar.gz
+          docker load < huawei-cadvisor-beta_arm64.tar.gz
       when: ansible_architecture == "aarch64"
 
-    - name: Load MindX DL-core images - x86_64
+    - name: Load mindx images - x86_64
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < vc-controller-manager.tar.gz;
-          docker load < vc-scheduler.tar.gz;
-          docker load < vc-webhook-manager.tar.gz;
-          docker load < hccl-controller.tar.gz;
+          docker load < vc-controller-manager_arm64.tar.gz;
+          docker load < vc-scheduler_arm64.tar.gz;
+          docker load < vc-webhook-manager_arm64.tar.gz;
+          docker load < hccl-controller_arm64.tar.gz;
           docker load < Ascend-K8sDevicePlugin-0.0.1-x86-Docker.tar.gz;
-          docker load < huawei-cadvisor-beta.tar.gz
+          docker load < huawei-cadvisor-beta_arm64.tar.gz
       when: ansible_architecture == "x86_64"
