--- a/mindx-dl/deploy/offline/single/offline_load_images.yaml
+++ b/mindx-dl/deploy/offline/single/offline_load_images.yaml
@@ -60,10 +60,10 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < vc-controller-manager_arm64.tar.gz;
-          docker load < vc-scheduler_arm64.tar.gz;
-          docker load < vc-webhook-manager_arm64.tar.gz;
-          docker load < hccl-controller_arm64.tar.gz;
+          docker load < vc-controller-manager_amd64.tar.gz;
+          docker load < vc-scheduler_amd64.tar.gz;
+          docker load < vc-webhook-manager_amd64.tar.gz;
+          docker load < hccl-controller_amd64.tar.gz;
           docker load < Ascend-K8sDevicePlugin-0.0.1-x86-Docker.tar.gz;
-          docker load < huawei-cadvisor-beta_arm64.tar.gz
+          docker load < huawei-cadvisor-beta_amd64.tar.gz
       when: ansible_architecture == "x86_64"
