--- a/mindx-dl/deploy/yamls/kubernetes/base/daemonset.yaml
+++ b/mindx-dl/deploy/yamls/kubernetes/base/daemonset.yaml
@@ -19,7 +19,7 @@ spec:
       serviceAccountName: cadvisor
       containers:
       - name: cadvisor
-        image: google/cadvisor:beta
+        image: google/cadvisor:v0.34.0-r03
         resources:
           requests:
             memory: 300Mi
