Match-id-2b0f2edc23bd8b7f25e40f6b3edba928c4eb8c82

--- a/mindx-dl/deploy/online/cluster/init_kubernetes.yaml
+++ b/mindx-dl/deploy/online/cluster/init_kubernetes.yaml
@@ -1,3 +1,4 @@
+# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
 ---
 # This playbook is used to initialize the K8S cluster.
 # Before running this script, ensure that Docker has been installed and the basic image of K8S has been imported.
