--- a/mindx-dl/deploy/online/online_join_cluster.yaml
+++ b/mindx-dl/deploy/online/online_join_cluster.yaml
@@ -1,3 +1,4 @@
+# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
 # Please Read the following instructions first.
 #
 # use command to run this yaml:
