--- a/mindx-dl/deploy/online/cluster/online_deploy_service.yaml
+++ b/mindx-dl/deploy/online/cluster/online_deploy_service.yaml
@@ -1,3 +1,4 @@
+# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
 ---
 # This playbook is used to deploy the MindX DL.
 # Before running the script, ensure that the dependent files are stored in the 'dls_root_dir' directory defined in /etc/ansible/hosts.
