--- a/mindx-dl/deploy/online/cluster/online_install_package.yaml
+++ b/mindx-dl/deploy/online/cluster/online_install_package.yaml
@@ -1,3 +1,4 @@
+# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
 ---
 # This playbook is used to online install software packages, including NFS.
 
