--- a/mindx-dl/deploy/online/cluster/set_global_env.yaml
+++ b/mindx-dl/deploy/online/cluster/set_global_env.yaml
@@ -1,3 +1,4 @@
+# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
 ---
 # This playbook is used to modify system configurations on the master and worker nodes before all deployment.
 # Make sure that this script is executed first.
