Match-id-24dc533e8476e15e97b17db030fc217f7e9e8557

--- a/mindx-dl/deploy/online/cluster/clean_services.yaml
+++ b/mindx-dl/deploy/online/cluster/clean_services.yaml
@@ -28,6 +28,7 @@
     shell:
       chdir: "{{deploy_yaml_dir}}"
       cmd:
+        kubectl delete -f rbac.yaml;
         kubectl delete -f hccl-controller.yaml
     tags: hccl-controller
     ignore_errors: yes
