--- a/mindx-dl/deploy/online/cluster/set_global_env.yaml
+++ b/mindx-dl/deploy/online/cluster/set_global_env.yaml
@@ -2,6 +2,18 @@
 ---
 # This playbook is used to modify system configurations on the master and worker nodes before all deployment.
 # Make sure that this script is executed first.
+- hosts: master
+  remote_user: root
+
+  tasks:
+    - name: Check master IP
+      fail:
+        msg: "Master IP is conflict with kubernetes cluster ip. To change the Kubernetes cluster IP address, perform the following steps: \
+               Step 1, edit {{playbook_dir}}/init_kubernetes.yaml, find the line '--pod-network-cidr=192.168.0.0/16', and change '192.168.0.0/16' to another; \
+               Step 2, edit {{dls_root_dir}}/yaml/calico.yaml, find the line 'value: '192.168.0.0/16', and change '192.168.0.0/16' to another. \
+               At last, ensure that the IP addresses in Step 1 and Step 2 are the same."
+      when:
+        - ansible_default_ipv4['address'].startswith("192.168")
 
 - hosts: cluster
   remote_user: root
