Match-id-5294f863bf8aee73a73cc9e88e2fcbf6f3e906da

--- a/mindx-dl/deploy/online/cluster/online_load_images.yaml
+++ b/mindx-dl/deploy/online/cluster/online_load_images.yaml
@@ -148,12 +148,12 @@
     - name: Pull mindx images - arm64
       shell:
         cmd:
-          docker pull {{item}}
+          docker pull {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/vc-controller-manager_arm64:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-scheduler_arm64:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-webhook-manager_arm64:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/hccl-controller_arm64:{{hccl_version}}"
+        - vc-controller-manager_arm64:{{volcano_version}}
+        - vc-scheduler_arm64:{{volcano_version}}
+        - vc-webhook-manager_arm64:{{volcano_version}}
+        - hccl-controller_arm64:{{hccl_version}}
       when: ansible_architecture == "aarch64"
       tags:
         - ascend-hub
@@ -161,12 +161,12 @@
     - name: Pull mindx images - x86_64
       shell:
         cmd:
-          docker pull {{item}}
+          docker pull {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/vc-controller-manager_amd64:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-scheduler_amd64:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-webhook-manager_amd64:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/hccl-controller_amd64:{{hccl_version}}"
+        - vc-controller-manager_amd64:{{volcano_version}}
+        - vc-scheduler_amd64:{{volcano_version}}
+        - vc-webhook-manager_amd64:{{volcano_version}}
+        - hccl-controller_amd64:{{hccl_version}}
       when: ansible_architecture == "x86_64"
       tags:
         - ascend-hub
@@ -174,12 +174,12 @@
     - name: Tag mindx images - arm64
       shell:
         cmd:
-          docker tag {{item}}
+          docker tag {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/vc-controller-manager_arm64:{{volcano_version}} volcanosh/vc-controller-manager:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-scheduler_arm64:{{volcano_version}} volcanosh/vc-scheduler:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-webhook-manager_arm64:{{volcano_version}} volcanosh/vc-webhook-manager:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/hccl-controller_arm64:{{hccl_version}} hccl-controller:{{hccl_version}}"
+        - vc-controller-manager_arm64:{{volcano_version}} volcanosh/vc-controller-manager:{{volcano_version}}
+        - vc-scheduler_arm64:{{volcano_version}} volcanosh/vc-scheduler:{{volcano_version}}
+        - vc-webhook-manager_arm64:{{volcano_version}} volcanosh/vc-webhook-manager:{{volcano_version}}
+        - hccl-controller_arm64:{{hccl_version}} hccl-controller:{{hccl_version}}
       when: ansible_architecture == "aarch64"
       tags:
         - ascend-hub
@@ -187,12 +187,12 @@
     - name: Tag mindx images - x86_64
       shell:
         cmd:
-          docker tag {{item}}
+          docker tag {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/vc-controller-manager_amd64:{{volcano_version}} volcanosh/vc-controller-manager:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-scheduler_amd64:{{volcano_version}} volcanosh/vc-scheduler:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/vc-webhook-manager_amd64:{{volcano_version}} volcanosh/vc-webhook-manager:{{volcano_version}}"
-        - "{{ascend_hub_prefix}}/hccl-controller_amd64:{{hccl_version}} hccl-controller:{{hccl_version}}"
+        - vc-controller-manager_amd64:{{volcano_version}} volcanosh/vc-controller-manager:{{volcano_version}}
+        - vc-scheduler_amd64:{{volcano_version}} volcanosh/vc-scheduler:{{volcano_version}}
+        - vc-webhook-manager_amd64:{{volcano_version}} volcanosh/vc-webhook-manager:{{volcano_version}}
+        - hccl-controller_amd64:{{hccl_version}} hccl-controller:{{hccl_version}}
       when: ansible_architecture == "x86_64"
       tags:
         - ascend-hub
@@ -363,10 +363,10 @@
     - name: Pull mindx images - arm64
       shell:
         cmd:
-          docker pull {{item}}
+          docker pull {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/ascend-k8sdeviceplugin_arm64:{{deviceplugin_version}}"
-        - "{{ascend_hub_prefix}}/cadvisor_arm64:{{cadvisor_version}}"
+        - ascend-k8sdeviceplugin_arm64:{{deviceplugin_version}}
+        - cadvisor_arm64:{{cadvisor_version}}
       when: ansible_architecture == "aarch64"
       tags:
         - ascend-hub
@@ -374,10 +374,10 @@
     - name: Pull mindx images - x86_64
       shell:
         cmd:
-          docker pull {{item}}
+          docker pull {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/ascend-k8sdeviceplugin_amd64:{{deviceplugin_version}}"
-        - "{{ascend_hub_prefix}}/cadvisor_amd64:{{cadvisor_version}}"
+        - ascend-k8sdeviceplugin_amd64:{{deviceplugin_version}}
+        - cadvisor_amd64:{{cadvisor_version}}
       when: ansible_architecture == "x86_64"
       tags:
         - ascend-hub
@@ -385,10 +385,10 @@
     - name: Tag mindx images - arm64
       shell:
         cmd:
-          docker tag {{item}}
+          docker tag {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/ascend-k8sdeviceplugin_arm64:{{deviceplugin_version}} ascend-k8sdeviceplugin:{{deviceplugin_version}}"
-        - "{{ascend_hub_prefix}}/cadvisor_arm64:{{cadvisor_version}} google/cadvisor:{{cadvisor_version}}"
+        - ascend-k8sdeviceplugin_arm64:{{deviceplugin_version}} ascend-k8sdeviceplugin:{{deviceplugin_version}}
+        - cadvisor_arm64:{{cadvisor_version}} google/cadvisor:{{cadvisor_version}}
       when: ansible_architecture == "aarch64"
       tags:
         - ascend-hub
@@ -396,10 +396,10 @@
     - name: Tag mindx images - x86_64
       shell:
         cmd:
-          docker tag {{item}}
+          docker tag {{ascend_hub_prefix}}/{{item}}
       with_items:
-        - "{{ascend_hub_prefix}}/ascend-k8sdeviceplugin_amd64:{{deviceplugin_version}} ascend-k8sdeviceplugin:{{deviceplugin_version}}"
-        - "{{ascend_hub_prefix}}/cadvisor_amd64:{{cadvisor_version}} google/cadvisor:{{cadvisor_version}}"
+        - ascend-k8sdeviceplugin_amd64:{{deviceplugin_version}} ascend-k8sdeviceplugin:{{deviceplugin_version}}
+        - cadvisor_amd64:{{cadvisor_version}} google/cadvisor:{{cadvisor_version}}
       when: ansible_architecture == "x86_64"
       tags:
         - ascend-hub
