--- a/mindx-dl/deploy/online/cluster/set_global_env.yaml
+++ b/mindx-dl/deploy/online/cluster/set_global_env.yaml
@@ -42,6 +42,7 @@
         cmd:
           systemctl stop firewalld.service;
           systemctl disable firewalld.service
+      ignore_errors: True
       when:
         - ansible_distribution == 'CentOS'
 
@@ -103,7 +104,9 @@
         path: /etc/profile
         regexp: '(export no_proxy)(.*)'
         replace: '\1\2,{{ master_ip }}'
-      when: has_no_proxy_var.stdout != ""
+      when:
+        - has_no_proxy_var.stdout != ""
+        - ansible_default_ipv4['address'] not in has_no_proxy_var.stdout
       tags: init-master
 
     # create no_proxy when no_proxy exists
